--- a/Project3.Rmd
+++ b/Project3.Rmd
@@ -2,86 +2,116 @@
 title: "Project 3"
 author: "Nicole Levin"
 date: "2022-11-07"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+# Analysis of `r params[[1]]` channel
+  
+## Introduction
+This report analyzes one data channel of a dataset of features about articles published by Mashable in a period of two years. This report contains some summary statistics and plots, model-fitting for a linear regression model and a boosted tree, and a comparison of the predictive abilities of the two models. There are six data channels in the complete dataset: lifestyle, entertainment, business, social media, technology, and world. Results for the other channels can be seen in their respective reports. The full dataset contains 61 attributes for each article, but we will focus our attention on the following six for summarizing and modeling.
+  
+1. num_hrefs: Number of links
+2. n_tokens_title: Number of words in the title 
+3. kw_avg_avg: Average keyword 
+4. average_token_length: Average length of the words in the content 
+5. num_imgs: Number of images 
+6. n_non_stop_unique_tokens: Rate of unique non-stop words in the content 
+ 
+The packages required for creating this report are the following:  
 
-Nicole will fill in the introduction section once we have landed on variables that we are going to use.
+1. `tidyverse`
+2. `caret`
+3. `leaps`
+4. `rmarkdown`
 
-
-
-
-Now, we will pull data from one of the data channels. This will later be extended to all of the channels.
+We will start with loading the required packages and reading in the data.
 ```{r}
 #Load packages
 library(tidyverse)
 library(caret)
 library(leaps)
+library(rmarkdown)
 
-#Use a relative path to import data. For now I will stick with the lifestyle channel.
-#My interpretation here is that we need to download the data into our project repo in order to be able to do this with a relative path.
+#Use a relative path to import data. 
 news_data <- read_csv("OnlineNewsPopularity.csv")
-str(news_data)
 
-#For now stick with one channel. Later channel can be a parameter.
-channel <- "lifestyle"
-channel_filter <- paste0("data_channel_is_", channel)
+#Filter data for just the desired channel.
+params[[1]]
+channel_filter <- paste0("data_channel_is_", params[[1]])
 selected_data <- filter(news_data, get(channel_filter) == 1)
+selected_data <- selected_data %>% select(num_hrefs, n_tokens_title, kw_avg_avg, average_token_length, num_imgs, n_non_stop_unique_tokens, shares)
+```
 
-#Now produce some summaries and plots with the data
-#I'll first look at differences in shares for weekend vs. weekday
-weekend_weekday <- selected_data %>% group_by(is_weekend) %>% summarize(mean_by_weekend = mean(shares))
-weekend_weekday
-#Mean shares is higher for weekend than weekday here fir lifestyle, but it isn't a huge difference
+## Summary Statistics
+Before modeling, we'll look at some basic summary statistics and graphs, starting with a summary table of means and standard deviations of all of our variables of interest.
 
-#Look at number of keywords
-g <- ggplot(data=selected_data, aes(x=num_keywords, y=shares))
-g + geom_point() + labs(title = "Shares vs. Number of Keywords")
-#Seems to be a potential positive trend there
+```{r}
+#Calculate means and standard deviations
+col_means <- colMeans(selected_data)
+col_sds <- apply(selected_data,2,sd)
 
-#Now look at mean, median, and quartiles for number of images and number of videos
-summary(selected_data$num_imgs)
-summary(selected_data$num_videos)
+#Put into a table
+data_table <- rbind(t(col_means), t(col_sds))
+row.names(data_table) <- c("Mean", "Std. Dev.")
+data_table
 
-#Now create a scatterplot for each of those variables vs. shares
+```
+
+Next, we will look at a scatterplot of number of links vs. shares. An upward trend in this graph would indicate that articles with additional links tend  to be shared more often.
+```{r}
+#Create a scatterplot for num_hrefs vs shares
+g <- ggplot(data=selected_data, aes(x=num_hrefs, y=shares))
+g + geom_point() + labs(title = "Shares vs. Number of links")
+
+```
+
+Next, we will look at a scatterplot of number of images vs. shares. An upward trend in this graph would indicate that articles with more images tend  to be shared more often.
+```{r}
+#Plot num_imgs vs shares
 g <- ggplot(data=selected_data, aes(x=num_imgs, y=shares))
 g + geom_point() + labs(title = "Shares vs. Number of Images")
+```
 
-g <- ggplot(data=selected_data, aes(x=num_videos, y=shares))
-g + geom_point() + labs(title = "Shares vs. Number of Videos")
+Next, we will look at a scatterplot of number of words in the title vs. shares. An upward trend in this graph would indicate that articles with additional words in the title tend  to be shared more often.
 
-#Look for correlated variables
-cor(selected_data2)
+```{r}
+g <- ggplot(data=selected_data, aes(x=n_tokens_title, y=shares))
+g + geom_point() + labs(title = "Shares vs. Number of Words in Title")
+```
+
+Next, we will look at a scatterplot of average word length vs. shares. An upward trend in this graph would indicate that articles with a larger average word length tend  to be shared more often.
+
+```{r}
+g <- ggplot(data=selected_data, aes(x=average_token_length, y=shares))
+g + geom_point() + labs(title = "Shares vs. Average Token Length")
 
 ```
 
-Now split data for modeling and run linear regression models.
+## Model Preparation
+Next, we will prepare for modeling by splitting the data into a training and test set. We will use the training set to fit two models, a linear regression and a boosted tree. The test set will be then used to evaluate the abilities of the models to predict out of sample results for number of shares.
 ```{r}
-#Filter down data set to just what could be used in models
-selected_data2 <- select(selected_data, 2:13, 20:61)
 #Split data for modeling into train and test sets.
 set.seed(371)
-train_index <- createDataPartition(selected_data2$shares, p=0.7, list=FALSE)
-data_train <- selected_data2[train_index, ]
-data_test <- selected_data2[-train_index, ]
-
-#Create a linear regression. I have not gotten a very good one so far.
-linear_reg1 <- lm(shares ~ ., data = data_train)
-#Linear regression of all shows these as significant: num_hrefs, average_token_length, kw_max_avg, kw_avg_avg, self_reference_min_shares, abs_title_subjectivity
-linear_reg2 <- lm(shares ~ num_hrefs + average_token_length + kw_max_avg + kw_avg_avg, self_reference_min_shares + abs_title_subjectivity, data = data_train)
-summary(linear_reg2)
-
+train_index <- createDataPartition(selected_data$shares, p=0.7, list=FALSE)
+data_train <- selected_data[train_index, ]
+data_test <- selected_data[-train_index, ]
 ```
 
-Random Forest Model
+## Linear Regression Model
+The first model we will look at is a basic linear regression model. In linear regression, the best-fit model is found by minimizing the sum of the squares of the residuals. The parameter estimates are then used in the regression equation for prediction of future values, finding confidence intervals for mean values, etc. Linear regression is often the simplest option and can be more interpretable than some of the ensemble methods, but it often loses out when prediction is the most important goal.
+
 ```{r}
-#Insert model here
+#Create a linear regression. 
+linear_reg <- lm(shares ~ num_hrefs + n_tokens_title + num_imgs + average_token_length + kw_avg_avg + n_non_stop_unique_tokens, data = data_train)
+summary(linear_reg)
+
 ```
 
-Boosted Tree Model
+## Boosted Tree Model
+Tree-based methods are another modeling option available. The methodology for trees is to split the predictor space into regions with different predictions for each region. Boosting trees is a way to improve the predictive ability over a single tree fit. Boosting is slow fitting of trees where trees are grown sequentially. Each tree grown on a modified version of the original data and the predictions update as the trees grow. Boosting typically improves the predictive performance over a single tree fit.
 ```{r}
 #Create a boosted tree fit. Right now the tuning grid just matches the one from the homework. There could be room for improvement there.
 tuneGrid = expand.grid(n.trees = c(25, 50, 100, 150, 200), interaction.depth = 1:4, shrinkage = 0.1, n.minobsinnode = 10)
@@ -93,9 +123,31 @@ boosted_tree
 
 ```
 
-Comparison
+## Model Comparison
+Now the two models will be compared based on their ability to predict out of sample results for number of shares. The model with the lower RMSE will be selected as the better model.
 ```{r}
+#Make predictions using the test data
+pred_reg <- predict(linear_reg, newdata = data_test)
+pred_boost <- predict(boosted_tree, newdata = data_test)
+results_reg <- postResample(pred_reg, obs = data_test$shares)
+results_boost <- postResample(pred_boost, obs = data_test$shares)
 
+results_reg
+results_boost
+
+#Select the better model
+if(results_reg[1] < results_boost[1]){winner <- "linear regression"
+  }else{winner <- "boosted tree"}
 
 ```
 
+Based on resulting RMSE, the better performing model for prediction is the 
+`r winner` model.
+  
+## Citation
+Data used to prepare this report is from:  
+K. Fernandes, P. Vinagre and P. Cortez. A Proactive Intelligent Decision
+Support System for Predicting the Popularity of Online News. Proceedings
+of the 17th EPIA 2015 - Portuguese Conference on Artificial Intelligence,
+September, Coimbra, Portugal.
+    
