--- a/Project3.Rmd
+++ b/Project3.Rmd
@@ -3,6 +3,8 @@ title: "Project 3"
 author: "Nicole Levin"
 date: "2022-11-07"
 output: github_document
+params:
+  channel: "channel"
 ---
 
 ```{r setup, include=FALSE}
@@ -26,6 +28,7 @@ The packages required for creating this report are the following:
 2. `caret`
 3. `leaps`
 4. `rmarkdown`
+5. `knitr`
 
 We will start with loading the required packages and reading in the data.
 ```{r}
@@ -34,12 +37,12 @@ library(tidyverse)
 library(caret)
 library(leaps)
 library(rmarkdown)
+library(knitr)
 
 #Use a relative path to import data. 
 news_data <- read_csv("OnlineNewsPopularity.csv")
 
 #Filter data for just the desired channel.
-params[[1]]
 channel_filter <- paste0("data_channel_is_", params[[1]])
 selected_data <- filter(news_data, get(channel_filter) == 1)
 selected_data <- selected_data %>% select(num_hrefs, n_tokens_title, kw_avg_avg, average_token_length, num_imgs, n_non_stop_unique_tokens, shares)
@@ -56,7 +59,7 @@ col_sds <- apply(selected_data,2,sd)
 #Put into a table
 data_table <- rbind(t(col_means), t(col_sds))
 row.names(data_table) <- c("Mean", "Std. Dev.")
-data_table
+kable(data_table)
 
 ```
 
@@ -132,12 +135,14 @@ pred_boost <- predict(boosted_tree, newdata = data_test)
 results_reg <- postResample(pred_reg, obs = data_test$shares)
 results_boost <- postResample(pred_boost, obs = data_test$shares)
 
-results_reg
-results_boost
+#Create table of results
+results_table <- rbind(t(results_reg), t(results_boost))
+row.names(results_table) <- c("Linear Regression", "Boosted Tree")
+kable(results_table)
 
 #Select the better model
 if(results_reg[1] < results_boost[1]){winner <- "linear regression"
-  }else{winner <- "boosted tree"}
+  } else{winner <- "boosted tree"}
 
 ```
 
